--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   width: 18%;
   padding: 0.5%;
+  padding-bottom: 30px;
   margin: 3% 1%;
   margin-top: 1%;
   background-color: #282c34;
@@ -12,6 +13,7 @@
   position: relative;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   transition: color 0.4s, background 0.4s;
+  position: relative;
 }
 
 .media:hover {
@@ -43,7 +45,6 @@ img {
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
-
 
 
 
