--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   width: 18%;
   padding: 0.5%;
-  padding-bottom: 30px;
+  padding-bottom: 3%;
   margin: 3% 1%;
   margin-top: 1%;
   background-color: #282c34;
