--- a/src/components/ContentModal/ContentModal.css
+++ b/src/components/ContentModal/ContentModal.css
@@ -1,3 +1,111 @@
+/* .content_landscape {
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+.content_portrait {
+  display: none;
+  object-fit: contain;
+  border-radius: 10px;
+}
+
+.tagline {
+  padding-bottom: 10px;
+  align-self: center;
+}
+
+.content_modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+  overflow-y: scroll;
+}
+
+.content_modal::-webkit-scrollbar{
+  display: none;
+}
+
+.content_about {
+  padding: 2%;
+  width: 95%;
+  height: 90%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  font-weight: 300;
+}
+
+.content_title{
+  height: 12%;
+  font-size: 5vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.content_description {
+  display: flex;
+  height: 40%;
+  overflow-y: scroll;
+  padding: 2%;
+  scrollbar-width: thin;
+  box-shadow: inset 0 0 5px #000000;
+  text-align: justify;
+}
+
+.content_description::-webkit-scrollbar{
+  display: none;
+}
+
+.button {
+  width: 100%;
+  background: orange;
+  height: 40px;
+}
+
+.button:hover {
+  background: darkblue;
+} */
+
+
+
+
+  .content_landscape {
+    display: none;
+  }
+  .content_portrait{
+    display: flex;
+    width: 38%;
+  }
+  .content_modal{
+    flex-direction: row;
+    justify-content: none;
+    padding: 10px 0;
+  }
+  .content_about{
+    width: 58%;
+    padding: 0;
+    height: 100%;
+  }
+  .content_title{
+    font-size: 3.5vw;
+  }
+  .content_description {
+    font-size: 22px;
+  }
+
+
+
+
+
+
+
+
+
+
+/* 
 .content_landscape {
   object-fit: contain;
   border-radius: 10px;
@@ -67,50 +175,7 @@
 
 .button:hover {
   background: darkblue;
-}
-
-
-
-
-
-
-
-@media (min-width: 835px) {
-  .content_landscape {
-    display: none;
-  }
-  .content_portrait{
-    display: flex;
-    width: 38%;
-  }
-  .content_modal{
-    flex-direction: row;
-    justify-content: space-around;
-    padding: 10px 0;
-  }
-  .content_about{
-    width: 58%;
-    padding: 0;
-    height: 100%;
-  }
-  .content_title{
-    font-size: 3.5vw;
-  }
-  .content_description {
-    font-size: 22px;
-  }
-
-}
-
-
-
-
-
-
-
-
-
-
+} */
 
 
 
