--- a/src/components/ContentModal/ContentModal.css
+++ b/src/components/ContentModal/ContentModal.css
@@ -1,76 +1,3 @@
-/* .content_landscape {
-  object-fit: contain;
-  border-radius: 10px;
-}
-
-.content_portrait {
-  display: none;
-  object-fit: contain;
-  border-radius: 10px;
-}
-
-.tagline {
-  padding-bottom: 10px;
-  align-self: center;
-}
-
-.content_modal {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  width: 100%;
-  overflow-y: scroll;
-}
-
-.content_modal::-webkit-scrollbar{
-  display: none;
-}
-
-.content_about {
-  padding: 2%;
-  width: 95%;
-  height: 90%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  font-weight: 300;
-}
-
-.content_title{
-  height: 12%;
-  font-size: 5vw;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.content_description {
-  display: flex;
-  height: 40%;
-  overflow-y: scroll;
-  padding: 2%;
-  scrollbar-width: thin;
-  box-shadow: inset 0 0 5px #000000;
-  text-align: justify;
-}
-
-.content_description::-webkit-scrollbar{
-  display: none;
-}
-
-.button {
-  width: 100%;
-  background: orange;
-  height: 40px;
-}
-
-.button:hover {
-  background: darkblue;
-} */
-
-
-
 
   .content_landscape {
     display: none;
@@ -87,13 +14,12 @@
   .content_modal img{
     width: 100%;
   }
-
   .img_container {
-    width: 40%;
+    width: 35%;
     padding-right: 2%;
   }
   .content_about{
-    width: 60%;
+    width: 65%;
     padding: 0;
     height: 100%;
   }
@@ -101,10 +27,55 @@
     font-size: 3.5vw;
   }
   .content_description {
-    font-size: 22px;
+    font-size: 1.1em;
+    padding-top: 5%;
+    font-weight: lighter;
   }
 
+  .tagline {
+    color: orange;
+  }
 
+  .button {
+    width: 50%;
+    height: 40px;
+    background-color: green;
+  }
+  
+
+
+
+
+
+
+  @media (max-width: 835px) {
+    .content_landscape {
+      display: flex;
+      width: 100%;
+    }
+    .content_portrait{
+      display: none;
+    }
+    .content_modal{
+      flex-direction: column;
+      justify-content: none;
+    }
+    .content_modal img{
+      width: 100%;
+    }
+    .img_container {
+      width: 100%;
+      padding-right: 0%;
+    }
+    .content_about{
+      width: 100%;
+      padding: 0;
+      height: 100%;
+    }
+    .button {
+      width: 100%;
+    }
+  }
 
 
 
