--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -125,12 +125,38 @@ img {
 
 @media (max-width: 450px) {
   .media {
-    width: 100%;
+    width: 80%;
+    margin: 0 10%;
+    margin-bottom: 5%;
+  }
+
+  .subtitle{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-size: 0.8em;
+    padding: 0 1%;
+    padding-bottom: 1%
+  }
+
+}
+
+
+
+
+
+
+@media (max-width: 280px) {
+  .media {
+    width: 80%;
+    margin: 0 10%;
+    margin-bottom: 5%;
   }
 
   .subtitle{
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: space-between;
     font-size: 0.8em;
     padding: 0 1%;
