--- a/src/pages/trending/Trending.css
+++ b/src/pages/trending/Trending.css
@@ -1,3 +1,7 @@
+.container {
+  padding-bottom: 5%;
+}
+
 .trending{
   display: flex;
   flex-wrap: wrap;
@@ -11,9 +15,3 @@ h2 {
 
 
 
-
-/* @media (max-width: 900px) {
-  h2 {
-
-  }
-} */
