--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -14,7 +14,7 @@
   background: #39445a;
   padding-top: 6%;
   overflow: scroll;
-  padding-bottom: 5%;
+  padding-bottom: 10%;
 }
 
 
@@ -26,6 +26,7 @@
   .app {
     padding-top: 8%;
     width: 100%;
+    padding-bottom: 15%;
   }
 
   h1{
@@ -39,5 +40,16 @@
   .app {
     padding-top: 10%;
     width: 100%;
+    padding-bottom: 20%;
+  }
+}
+
+
+
+@media (max-width: 300px){
+  .app {
+    padding-top: 10%;
+    width: 100%;
+    padding-bottom: 25%;
   }
 }
