--- a/src/components/ContentModal/ContentModal.css
+++ b/src/components/ContentModal/ContentModal.css
@@ -156,7 +156,7 @@
 .content_title{
   font-size: 1.8em;
   line-height: 35px;
-  /* margin-top: 2%; */
+  margin-top: 2%;
 }
 .content_description {
   font-size: 1.1em;
