--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -124,9 +124,10 @@ img {
 
 @media (max-width: 450px) {
   .media {
-    width: 60%;
-    margin: 0 20%;
+    width: 90%;
+    margin: 0 5%;
     margin-bottom: 5%;
+    height: 20%;
   }
 
   .subtitle{
@@ -137,6 +138,7 @@ img {
     padding: 0 1%;
     padding-bottom: 1%
   }
+
 
 }
 
@@ -149,8 +151,8 @@ img {
 
 @media (max-width: 280px) {
   .media {
-    width: 80%;
-    margin: 0 10%;
+    width: 90%;
+    margin: 0 5%;
     margin-bottom: 5%;
   }
 
